tests/valid/ptr_type.fl
using import "c.fl";

main :: proc () {
  str: *u8 = c"hello";
  puts(c"hello");
}
